fix mathjax errors in markdown

--- a/variational_inference/ces.ipynb
+++ b/variational_inference/ces.ipynb
@@ -13,8 +13,8 @@
     "\n",
     "For this exercise we consider a model from behavioural economics for _Constant\n",
     "Elasticity of Substitution_, or CES for short. The parameters of the model are\n",
-    "$\\rho, \\alpha, u$ and the input is $\\xi = {x, x\\prime}$ where $x$ and $x\\prime$\n",
-    "are two baskets of goods such that $x, x\\prime \\in [0,100]^3$. The priors over\n",
+    "$\\rho, \\alpha, u$ and the input is $\\xi = {x, x^\\prime}$ where $x$ and $x^\\prime$\n",
+    "are two baskets of goods such that $x, x^\\prime \\in [0,100]^3$. The priors over\n",
     "the parameters are\n",
     "\n",
     "\\begin{aligned}\n",
@@ -27,8 +27,8 @@
     "\n",
     "\\begin{aligned}\n",
     "&U(x) = (\\sum_{i} x_i^\\rho\\alpha_i)^{\\frac{1}{\\rho}}\\\\\n",
-    "&\\mu_\\eta = u \\dot (U(x) - U(x\\prime))\\\\\n",
-    "&\\sigma_\\eta = 0.005 \\dot u \\dot (1 + ||x - x\\prime||) \\\\\n",
+    "&\\mu_\\eta = u \\cdot (U(x) - U(x^\\prime))\\\\\n",
+    "&\\sigma_\\eta = 0.005 \\cdot u \\cdot (1 + ||x - x^\\prime||) \\\\\n",
     "&\\eta \\sim \\mathcal{N}(\\mu_\\eta, \\sigma^2_\\eta)\\\\\n",
     "&y = sigmoid(\\eta)\n",
     "\\end{aligned}\n",
@@ -36,6 +36,19 @@
     "Use what you've learned from the `source_location` notebook to build a model\n",
     "in pyro, generate data, and infer the parameters of the data generating\n",
     "distribution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pyro"
    ]
   }
  ],
