--- a/exercises/monte_hall.ipynb
+++ b/exercises/monte_hall.ipynb
@@ -25,6 +25,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wikipedia’s statement of the assumptions:\n",
+    "\n",
+    "-   The host must always open a door that was not picked by the contestant.\n",
+    "-   The host must always open a door to reveal a goat and never the car.\n",
+    "-   The host must always offer the chance to switch between the originally chosen door and the remaining closed door."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
