make assumption clear in Monty Hall exercise

--- a/exercises/monty_hall.ipynb
+++ b/exercises/monty_hall.ipynb
@@ -17,22 +17,24 @@
     "which has a goat. He then says to you, “Do you want to pick door No. 2?” Is it\n",
     "to your advantage to switch your choice?\n",
     "\n",
+    "Put more clearly, we have the following assumptions:\n",
+    "\n",
+    "&nbsp; &nbsp; 1. You initially pick a door with no information, except that two\n",
+    "doors have goats behind them and one has a car.\n",
+    "\n",
+    "&nbsp; &nbsp; 2. The host must always open a door that was not picked by you.\n",
+    "\n",
+    "&nbsp; &nbsp; 3. The host must always open a door to reveal a goat and never the\n",
+    "car.\n",
+    "\n",
+    "&nbsp; &nbsp; 4. The host must always offer the chance to switch between the\n",
+    "originally chosen door and the remaining closed door.\n",
+    "\n",
     "Famed mathematician Paul Erdős refused to accept any explanation or formal\n",
     "proof for this problem, and insisted on a seeing the results of a simulation.\n",
     "Your mission, if you choose to accept it, is to satisfy Erdős’s requirement.\n",
     "Take some time to think about your answer to the problem, then implement a\n",
     "Pyro model to justify your answer."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Wikipedia’s statement of the assumptions:\n",
-    "\n",
-    "-   The host must always open a door that was not picked by the contestant.\n",
-    "-   The host must always open a door to reveal a goat and never the car.\n",
-    "-   The host must always offer the chance to switch between the originally chosen door and the remaining closed door."
    ]
   },
   {
