--- a/primitives/04-conditioning_on_data.ipynb
+++ b/primitives/04-conditioning_on_data.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "# Posterior inference\n",
     "\n",
-    "In this notebook we will address “learning” in the Bayesian context, which ends meaning updating the distributions of the parameters of a model, by conditioning on observed data.\n",
-    "Additionally we will uses Monte Carlo methods to do inference."
+    "In this notebook we will address “learning” in the Bayesian context, which ends meaning updating the distributions of the parameters of a model by conditioning on observed data.\n",
+    "\n"
    ]
   },
   {
@@ -136,6 +136,14 @@
     "plt.plot(measurements, prior_fairness.log_prob(measurements).exp(), color=\"blue\", label=\"prior\");\n",
     "plt.legend(loc=\"upper left\");\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we are using [Markov Chain Monte Carlo](http://www.columbia.edu/~mh2078/MonteCarlo/MCMC_Bayes.pdf) to characterize the posterior distribution of the fairness parameters.\n",
+    "Even if we are uncertain about the actual form of the posterior density, we can generally still use MCMC to simulate from it easily, and use the samples from that MCMC simulation to summarise the posterior distribution. If you use Stan, you will be familiar with this technique as it is the default."
    ]
   },
   {
@@ -320,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Summarising posterior with distributions\n",
+    "## SVI: Summarising posterior with distributions\n",
     "\n",
     "So far we have been using MCMC to summarise the posterior distribution of samples.\n",
     "This method is well-understood and easy(ish) to configure, and is eventually unbiased with respect to most estimands. It is also the classic used in most textbooks.\n",
