--- a/primitives/04-conditioning_on_data.ipynb
+++ b/primitives/04-conditioning_on_data.ipynb
@@ -14,6 +14,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Previously, in probabilistic programming\n",
+    "\n",
+    "`pyro` lets us set up models by composing random distributions. We have learned how to `sample` from these, how to `condition` them on data, and how to query various parameters from these models. \n",
+    "\n",
+    "## Next\n",
+    "\n",
+    "Next! We will look at a super basic example that illustrates what we actually do when we learn from data.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Coin fairness"
    ]
   },
@@ -28,7 +41,6 @@
    "outputs": [],
    "source": [
     "from math import sqrt\n",
-    "import os\n",
     "import torch\n",
     "import torch.distributions.constraints as constraints\n",
     "import matplotlib.pyplot as plt\n",
@@ -54,7 +66,13 @@
     "$$\\begin{aligned}\n",
     "\\operatorname{fairness} &\\sim \\operatorname{Beta}(10,10)\\\\\n",
     "\\operatorname{toss} &\\sim \\operatorname{Binom}(\\operatorname{fairness}).\n",
-    "\\end{aligned}$$"
+    "\\end{aligned}$$\n",
+    "\n",
+    "We will do this by using Bayes’ rule to condition on the observed data, calculating an updated density\n",
+    "\n",
+    "$$p(\\operatorname{fairness}|\\operatorname{toss}) = \\frac{p(\\operatorname{toss}|\\operatorname{fairness})}{p(\\operatorname{toss})}p(\\operatorname{fairness}).$$\n",
+    "\n",
+    "(This one is of course basic enough to do by hand.)"
    ]
   },
   {
