--- a/primitives/04-conditioning_on_data.ipynb
+++ b/primitives/04-conditioning_on_data.ipynb
@@ -72,7 +72,9 @@
     "\n",
     "$$p(\\operatorname{fairness}|\\operatorname{toss}) = \\frac{p(\\operatorname{toss}|\\operatorname{fairness})}{p(\\operatorname{toss})}p(\\operatorname{fairness}).$$\n",
     "\n",
-    "(This one is of course basic enough to do by hand.)"
+    "(This one is of course basic enough to do by hand.)\n",
+    "\n",
+    "We saw in the previous notebook that pyro can't find this posterior density automatically, but we can nonetheless do inference about it."
    ]
   },
   {
