--- a/primitives/05-regression_with_data.ipynb
+++ b/primitives/05-regression_with_data.ipynb
@@ -96,8 +96,7 @@
     "b_{ar} &\\sim \\mathcal{N}(0, 1)\\\\\n",
     "\\sigma &\\sim \\operatorname{Gamma}(1, \\frac12)\n",
     "\\end{aligned}$$\n",
-    "\n",
-    "where $\\alpha$ and $\\beta$ are the coefficients of the intercept and the ruggedness coefficient, respectively, and $\\gamma$ is the coefficient of the binary indicator of whether the country is in Africa.\n"
+    "\n"
    ]
   },
   {
@@ -141,7 +140,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inference proceeeds by conditioning the model on the observed data, and then sampling from the posterior distribution."
+    "Inference proceeeds by conditioning the model on the observed data, and then sampling from the posterior distribution. giving us updated estimates for the unknowns.\n",
+    "\n",
+    "$$\\begin{aligned}p (a, b_a, b_{ar}, b_r,\\sigma \\mid \\mathbf {y}, \\mathbf {X} )\n",
+    "&\\propto p (\\mathbf {y} \\mid \\mathbf {X} ,a, b_a, b_{ar}, b_r,\\sigma)p (a, b_a, b_{ar}, b_r,\\sigma)\n",
+    "\\end{aligned}$$"
    ]
   },
   {
