--- a/primitives/04-conditioning_on_data.ipynb
+++ b/primitives/04-conditioning_on_data.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "$$p(\\operatorname{fairness}|\\operatorname{toss}) = \\frac{p(\\operatorname{toss}|\\operatorname{fairness})}{p(\\operatorname{toss})}p(\\operatorname{fairness}).$$\n",
     "\n",
-    "(This one is of course basic enough to do by hand.)\n",
+    "(This one is of course basic enough to do by hand, but let us ignore that.)\n",
     "\n",
     "We saw in the previous notebook that pyro can't find this posterior density automatically, but we can nonetheless do inference about it."
    ]
@@ -93,7 +93,6 @@
     "    # sample f from the beta prior\n",
     "    \n",
     "    f = pyro.sample(\"latent_fairness\", dist.Beta(torch.tensor(alpha0), torch.tensor(beta0)))\n",
-    "    # loop over the observed data\n",
     "    pyro.sample(\"toss\", dist.Bernoulli(f), obs=toss)\n"
    ]
   },
@@ -303,7 +302,7 @@
     "\n",
     "    # sample f from the beta prior\n",
     "    f = pyro.sample(\"latent_fairness\", dist.Beta(torch.tensor(alpha0), torch.tensor(beta0)))\n",
-    "    # loop over the observed data\n",
+    "    # plate over the observed data\n",
     "    with pyro.plate(\"data\", tosses.shape[0]):\n",
     "        pyro.sample(\"tosses\", dist.Bernoulli(f), obs=tosses)\n"
    ]
