--- a/primitives/05-regression_with_data.ipynb
+++ b/primitives/05-regression_with_data.ipynb
@@ -142,8 +142,10 @@
    "source": [
     "Inference proceeeds by conditioning the model on the observed data, and then sampling from the posterior distribution. giving us updated estimates for the unknowns.\n",
     "\n",
-    "$$\\begin{aligned}p (a, b_a, b_{ar}, b_r,\\sigma \\mid \\mathbf {y}, \\mathbf {X} )\n",
-    "&\\propto p (\\mathbf {y} \\mid \\mathbf {X} ,a, b_a, b_{ar}, b_r,\\sigma)p (a, b_a, b_{ar}, b_r,\\sigma)\n",
+    "$$\\begin{aligned}\n",
+    "&p (a, b_a, b_{ar}, b_r,\\sigma \\mid \\operatorname{GDP}, \\operatorname{Ruggedness},\\operatorname{InAfrica} )\\\\\n",
+    "&\\quad \\propto p (\\operatorname{GDP} \\mid \\operatorname{Ruggedness},\\operatorname{InAfrica} ,a, b_a, b_{ar}, b_r,\\sigma)\\\\\n",
+    "& \\qquad \\cdot p (a, b_a, b_{ar}, b_r,\\sigma)\n",
     "\\end{aligned}$$"
    ]
   },
