analytic coin tossing

--- a/primitives/04-conditioning_on_data.ipynb
+++ b/primitives/04-conditioning_on_data.ipynb
@@ -347,6 +347,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Analytical version\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_tosses = tosses.shape[0]\n",
+    "tosses.sum(), tosses.shape[0]\n",
+    "posterior_fairness_analytic = dist.Beta(alpha0+tosses.sum(), beta0+n_tosses-tosses.sum())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## SVI: Summarising posterior with distributions\n",
     "\n",
     "So far we have been using MCMC to summarise the posterior distribution of samples.\n",
@@ -425,16 +445,10 @@
     "measurements = torch.linspace(0, 1, 1000)\n",
     "plt.plot(measurements, prior_fairness.log_prob(measurements).exp(), color=\"blue\", label=\"prior\");\n",
     "plt.plot(measurements, posterior_fairness.log_prob(measurements).exp(), color=\"purple\", label=\"variational posterior\");\n",
+    "plt.plot(measurements, posterior_fairness_analytic.log_prob(measurements).exp(), color=\"green\", label=\"analytic posterior\");\n",
     "plt.legend(loc=\"upper left\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
