--- a/primitives/05-regression_with_data.ipynb
+++ b/primitives/05-regression_with_data.ipynb
@@ -31,8 +31,7 @@
     "import torch\n",
     "import pyro\n",
     "import pyro.distributions as dist\n",
-    "from pyro.optim import Adam\n",
-    "from pyro.infer import Trace_ELBO, Predictive, MCMC, NUTS\n",
+    "from pyro.infer import Predictive, MCMC, NUTS\n",
     "import pyro.distributions as dist\n",
     "from pyro import poutine\n",
     "sns.set_theme()\n",
@@ -116,8 +115,7 @@
     "    ruggedness = pyro.sample(\"ruggedness\", dist.Normal(1.0, 0.5))        # <- overridden\n",
     "    mean = a + b_a * is_cont_africa + b_r * ruggedness + b_ar * is_cont_africa * ruggedness\n",
     "    s = pyro.sample(\"log_gdp\", dist.Normal(mean, sigma))                 # <- overridden\n",
-    "    return s\n",
-    "\n"
+    "    return s\n"
    ]
   },
   {
