--- a/primitives/05-regression_with_data.ipynb
+++ b/primitives/05-regression_with_data.ipynb
@@ -89,7 +89,7 @@
     "$$\\begin{aligned}\n",
     "\\text{GDP}_i &\\sim \\mathcal{N}(\\mu, \\sigma)\\\\\n",
     "\\mu &= a + b_a \\cdot \\operatorname{InAfrica}_i + b_r \\cdot \\operatorname{Ruggedness}_i + b_{ar} \\cdot \\operatorname{InAfrica}_i \\cdot \\operatorname{Ruggedness}_i \\\\\n",
-    "a &\\sim \\mathcal{N}(0, 1)\\\\\n",
+    "a &\\sim \\mathcal{N}(0, 10)\\\\\n",
     "b_a &\\sim \\mathcal{N}(0, 1)\\\\\n",
     "b_r &\\sim \\mathcal{N}(0, 1)\\\\\n",
     "b_{ar} &\\sim \\mathcal{N}(0, 1)\\\\\n",
@@ -142,7 +142,7 @@
     "\n",
     "$$\\begin{aligned}\n",
     "&p (a, b_a, b_{ar}, b_r,\\sigma \\mid \\operatorname{GDP}, \\operatorname{Ruggedness},\\operatorname{InAfrica} )\\\\\n",
-    "&\\quad \\propto p (\\operatorname{GDP} \\mid \\operatorname{Ruggedness},\\operatorname{InAfrica} ,a, b_a, b_{ar}, b_r,\\sigma)\\\\\n",
+    "&\\quad \\propto \\prod_i p (\\operatorname{GDP}_i \\mid \\operatorname{Ruggedness}_i,\\operatorname{InAfrica}_i ,a, b_a, b_{ar}, b_r,\\sigma)\\\\\n",
     "& \\qquad \\cdot p (a, b_a, b_{ar}, b_r,\\sigma)\n",
     "\\end{aligned}$$"
    ]
