document operator inversion

--- a/operator_inversion/operator_inversion.ipynb
+++ b/operator_inversion/operator_inversion.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Look, we can do approximate probabilistic inference with a complicated neural network! Here we will use a 2-million parameter neural net to generate a an approximate likelihood for ingerence in a model.\n",
+    "Look, we can do approximate probabilistic inference with a complicated neural network! Here we will use a 2-million parameter neural net to generate a an approximate likelihood for inference in a model.\n",
     "\n"
    ]
   },
@@ -35,19 +35,14 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import torch\n",
-    "import torch.fft as fft\n",
     "import torch.nn as nn\n",
     "from torch.optim import AdamW\n",
-    "from torch.nn.modules.loss import MSELoss\n",
     "from torch.functional import F \n",
-    "import einops\n",
-    "\n",
     "\n",
     "from src.nn_modules.fourier_2d_generic import SimpleBlock2dGeneric\n",
     "from src.heatmap import multi_heatmap\n",
-    "from src.utils import resolve_path\n",
     "\n",
-    "# device = torch.device('cuda')  # I can't make MCMC work on the GPU.\n",
+    "# device = torch.device('cuda')  # I can't make MCMC work on the GPU 😢\n",
     "device = torch.device('cpu')\n"
    ]
   },
@@ -55,7 +50,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This dataset is packed as as $(b, x, y, t)$ i.e. batch first, coordinates in the middle, time last. \n"
+    "## The data\n",
+    "\n",
+    "We have a dataset of snapshots from a [Navier-Stokes](https://en.wikipedia.org/wiki/Navier%E2%80%93Stokes_equations) simulator.\n",
+    "\n",
+    "This dataset is packed as as $(b, x, y, t)$ i.e. batch first, coordinates in the middle, time last. "
    ]
   },
   {
@@ -149,13 +148,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualise the data\n",
+    "\n",
+    "First we look at the snapshots"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "multi_img_plot_time(get_obs(data, 0, -1)['x'], n_cols=4, interval=5);\n"
+    "multi_img_plot_time(get_obs(data, 0, -1)['x'], n_cols=4, interval=5);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we look at the _forcing_, which is a field that perturbs the flow of the fluid"
    ]
   },
   {
@@ -171,7 +186,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Process predictor model"
+    "## Process predictor model\n",
+    "\n",
+    "Running a PDE simulator is expensive, so have trained a neural network which can reproduce these observations, by giving it a data set of 1000 simulations made up of many snapshots. The details of the network are on [Zongyi Li’s blog](https://zongyi-li.github.io/blog/2020/fourier-pde/)."
    ]
   },
   {
@@ -276,8 +293,7 @@
     "    def forward(self, batch):\n",
     "        batch = dict(**batch)\n",
     "        batch['latent'] = self.get_latent()\n",
-    "        return self.process_predictor(batch)\n",
-    "\n"
+    "        return self.process_predictor(batch)"
    ]
   },
   {
