begin SIR notebook

--- a/exercises/sir_prediction.ipynb
+++ b/exercises/sir_prediction.ipynb
@@ -3,9 +3,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "def covidlive_data(start_date=np.datetime64('2021-06-10')):\n",
+    "    df = pd.read_html('https://covidlive.com.au/report/daily-source-overseas/nsw')[1]\n",
+    "\n",
+    "    df = df[:200]\n",
+    "\n",
+    "    if df['NET2'][0] == '-':\n",
+    "        df = df[1:200]\n",
+    "\n",
+    "    dates = np.array(\n",
+    "        [\n",
+    "            np.datetime64(datetime.strptime(date, \"%d %b %y\"), 'D') - 1\n",
+    "            for date in df['DATE']\n",
+    "        ]\n",
+    "    )\n",
+    "    cases = np.array(df['NET2'].astype(int))\n",
+    "    cases = cases[dates >= start_date][::-1]\n",
+    "    dates = dates[dates >= start_date][::-1]\n",
+    "\n",
+    "    return dates, cases\n",
+    "\n",
+    "base = datetime(2021, 8, 1)\n",
+    "arr = np.array([base + timedelta(days=i) for i in range(90)])\n",
+    "print(arr)\n",
+    "dates, cases = covidlive_data(np.datetime64('2021-11-21'))\n",
+    "print(dates)\n",
+    "print(cases)"
+   ]
   }
  ],
  "metadata": {
