--- a/operator_inversion/operator_inversion.ipynb
+++ b/operator_inversion/operator_inversion.ipynb
@@ -576,7 +576,8 @@
     "We can probably do better than this.\n",
     "\n",
     "1. HMC is a good default MCMC algorithm, but probably in this case we could try Gibbs sampling to see if it is faster.\n",
-    "2. uncorrelated Gaussian noise is not plausible for such a model; we could assume some correlation structure for the latent field."
+    "2. uncorrelated Gaussian noise is not plausible for such a model; we could assume some correlation structure for the latent field.\n",
+    "3. this raster grid basis is a little silly. We have reason to suspect that a Fourier basis would be better; however, complex numbers are not well supported by pyro, so I didn't have time to implement all that we needed."
    ]
   },
   {
