--- a/exercises/sir_prediction.ipynb
+++ b/exercises/sir_prediction.ipynb
@@ -1,21 +1,29 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "pycharm": {
-     "is_executing": true
+     "name": "#%% md\n"
     }
    },
+   "source": [
+    "For this challenge, we will use pyro to predict future covid-19 case numbers in\n",
+    "Victoria. First, we need to get the data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from datetime import datetime, timedelta\n",
+    "from datetime import datetime\n",
     "\n",
     "def covidlive_data(start_date=np.datetime64('2021-06-10')):\n",
-    "    df = pd.read_html('https://covidlive.com.au/report/daily-source-overseas/nsw')[1]\n",
+    "    df = pd.read_html('https://covidlive.com.au/report/daily-source-overseas/vic')[1]\n",
     "\n",
     "    df = df[:200]\n",
     "\n",
@@ -34,12 +42,26 @@
     "\n",
     "    return dates, cases\n",
     "\n",
-    "base = datetime(2021, 8, 1)\n",
-    "arr = np.array([base + timedelta(days=i) for i in range(90)])\n",
-    "print(arr)\n",
-    "dates, cases = covidlive_data(np.datetime64('2021-11-21'))\n",
-    "print(dates)\n",
-    "print(cases)"
+    "dates, cases = covidlive_data(np.datetime64('2021-08-01'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That gets use the dates (`dates`) and associated case numbers (`cases`) for each\n",
+    "day since August 1. If you want to use a larger or smaller set of training data,\n",
+    "you can pass a different start date to the `covidlive_data` function.\n",
+    "\n",
+    "Given this data, your task is to compute (independent) predictive distributions\n",
+    "over the case numbers for the next 7 days (November 24 to November 30). At the\n",
+    "end of those seven days, we will see whose distributions had the highest average\n",
+    "likelihood.\n",
+    "\n",
+    "You may use any approach you wish to arrive at these predictive distributions:\n",
+    "Markov Chain Monte Carlo, Variational Inference, Gaussian Processes, Bayesian\n",
+    "Neural Networks, etc. All that matters is that your output is an iterable\n",
+    "of 7 pyro distributions."
    ]
   }
  ],
