complete covid challenge notebook

--- a/exercises/sir_prediction.ipynb
+++ b/exercises/sir_prediction.ipynb
@@ -61,7 +61,19 @@
     "You may use any approach you wish to arrive at these predictive distributions:\n",
     "Markov Chain Monte Carlo, Variational Inference, Gaussian Processes, Bayesian\n",
     "Neural Networks, etc. All that matters is that your output is an iterable\n",
-    "of 7 pyro distributions."
+    "of 7 pyro distributions.\n",
+    "\n",
+    "Here are some ideas for possible approaches you can take:\n",
+    "\n",
+    "An [introduction to epidemiological modelling](http://pyro.ai/examples/epi_intro.html)\n",
+    "From the Pyro documentation.\n",
+    "\n",
+    "A [Hamiltonian Monte Carlo example](http://pyro.ai/examples/sir_hmc.html), also\n",
+    "from the pyro documentation.\n",
+    "\n",
+    "A [probabilistic regression example](https://chrisbillington.net/COVID_NSW.html)\n",
+    "from Chris Billington.\n",
+    "\n"
    ]
   }
  ],
