--- a/operator_inversion/operator_inversion.ipynb
+++ b/operator_inversion/operator_inversion.ipynb
@@ -36,7 +36,6 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from torch.optim import AdamW\n",
@@ -45,9 +44,8 @@
     "from src.graphs import fno_graph\n",
     "from src.plots import img_plot, multi_img_plot_batch, multi_img_plot_time, multi_heatmap\n",
     "\n",
-    "\n",
     "# device = torch.device('cuda')  # I can't make MCMC work on the GPU 😢\n",
-    "device = torch.device('cpu')\n"
+    "device = torch.device('cpu')"
    ]
   },
   {
