--- a/primitives/05-regression_with_data.ipynb
+++ b/primitives/05-regression_with_data.ipynb
@@ -122,7 +122,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note the trick here, that we gave distributions even to inputs that we will get from data; this is how you need to do it, even if that distribution will never by used. During inference we  always override the values at those sites with data. "
+    "Note the trick here, that we gave distributions even to inputs that we will get from data; if that distribution will never by used, we still need something there.\n",
+    "During inference we  always override the values at those sites with data in regression."
    ]
   },
   {
@@ -161,7 +162,7 @@
     "mcmc = MCMC(nuts_kernel, num_samples=1000, warmup_steps=200)\n",
     "mcmc.run()\n",
     "\n",
-    "hmc_samples = {k: v.detach().cpu().numpy() for k, v in mcmc.get_samples().items()}"
+    "mc_samples = {k: v.detach().cpu().numpy() for k, v in mcmc.get_samples().items()}"
    ]
   },
   {
